--- a/index.html
+++ b/index.html
@@ -453,14 +453,10 @@
                     plugins.datalabels = {
                         display: true, // 레이블 표시
                         color: '#333',
-                        font: {
-                            size: 11,
-                            weight: 'bold'
-                        },
+                        font: {size: 11},
                         // ⭐️ 포맷터: 소수점 처리
                         formatter: function(value, context) {
-                            const val = value % 1 === 0 ? value : value.toFixed(1);
-                            return val + '%';
+                            return value.toString();
                         },
                         // ⭐️ 위치 설정: 주간/통합 직무 평가 vs 정당 지지율
                         align: function(context) {
