Update color constants for chart visualization

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         Chart.defaults.font.size = 12;
     
         // ⭐️ 2. 사용할 색상 정의
-        const POSITIVE_COLOR = '#36A2EB'; // 파란색 (긍정)
-        const NEGATIVE_COLOR = '#FF6384'; // 빨간색 (부정)
+        const POSITIVE_COLOR = '#0056b3'; // 파란색 (긍정)
+        const NEGATIVE_COLOR = '#C9151E'; // 빨간색 (부정)
     
         // ⭐️ 3. DataLabels 플러그인 등록 (사용하지 않았다면 필수)
         Chart.register(ChartDataLabels);
