Shorten labels for positive and negative data

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
             const newDatasets = [
                 {
-                    label: '잘하고 있다 (긍정)',
+                    label: '긍정',
                     data: source.good,
                     // ⭐️ 긍정은 POSITIVE_COLOR (파란색) 적용
                     borderColor: POSITIVE_COLOR, 
@@ -544,7 +544,7 @@
                     pointRadius: 5, pointHoverRadius: 7, tension: 0, order: 1
                 },
                 {
-                    label: '잘못하고 있다 (부정)',
+                    label: '부정',
                     data: source.bad,
                     // ⭐️ 부정은 NEGATIVE_COLOR (빨간색) 적용
                     borderColor: NEGATIVE_COLOR,
