Fix font family syntax in Chart.js settings

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         // -----------------------------------------------------------
         
         // Chart.js 전역 폰트 설정 (한글 깨짐 방지 및 폰트 통일)
-        Chart.defaults.font.family = 'Pretendard', sans-serif';
+        Chart.defaults.font.family = 'Pretendard, sans-serif';
         Chart.defaults.font.size = 12;
         
         // ⭐️ 사용할 색상 정의 (presChartFull 기준)
