Fix font-family syntax in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
         body {
-            font-family: 'Pretendard', sans-serif;
+            font-family: 'Pretendard, sans-serif;
             background-color: #f0f2f5;
             display: flex;
             justify-content: center;
