--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
         
         // ⭐️ CSV 데이터 로드
         function loadWeeklyPartyTrendChart() {
+            console.log("2페이지 데이터 로드 함수 시작.");
             const GALLUP_URL = './data/party_approval_gal_week.csv';
             const REALMETER_URL = './data/party_approval_real_week.csv';
             
