Update party color definitions in index.html

--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
         // ⭐️ 사용할 색상 정의 (presChartFull 기준)
         const POSITIVE_COLOR = '#0056b3';   // 파란색 (긍정, 더불어민주당)
         const NEGATIVE_COLOR = '#C9151E';   // 빨간색 (부정, 국민의힘)
-        const JO_GUK_COLOR = '#4B0082';     // 보라색 (조국혁신당)
+        const JO_GUK_COLOR = '#0073CF';     // cobalt색 (조국혁신당)
         const REFORM_COLOR = '#F38400';     // 주황색 (개혁신당)
-        const PROGRESSIVE_COLOR = '#008000';// 녹색 (진보당)
+        const PROGRESSIVE_COLOR = '#450693';// 보라색 (진보당)
         const NON_PARTISAN_COLOR = '#666666'; // 회색 (무당층)
 
         // DataLabels 플러그인 등록
