--- a/index.html
+++ b/index.html
@@ -696,6 +696,153 @@
             { label: '무당층', data: [27, 26, 26], borderColor: NON_PARTISAN_COLOR, borderWidth: 2, borderDash: [5, 5], pointRadius: 4, pointHoverRadius: 6, tension: 0, order: 3 }
         ];
 
+        // -----------------------------------------------------------
+        // ⭐️ 7-11 페이지 (자립준비청년 데이터) 관련 함수 (새로 추가)
+        // -----------------------------------------------------------
+
+        function createBarChart(canvasId, labels, datasets, yMin, yMax, unit, colorSet) {
+            const ctx = document.getElementById(canvasId).getContext('2d');
+            return new Chart(ctx, {
+                type: 'bar',
+                data: { labels, datasets },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    indexAxis: canvasId === 'chartEcon' ? 'y' : 'x', // 경제지표는 가로 막대
+                    layout: { padding: { left: 10, right: 20, top: 10, bottom: 10 } },
+                    plugins: {
+                        legend: { position: 'bottom', labels: { usePointStyle: true, boxWidth: 10, padding: 15 } },
+                        tooltip: {
+                            callbacks: {
+                                label: function(context) {
+                                    let label = context.dataset.label || '';
+                                    if (label) { label += ': '; }
+                                    label += context.parsed.y.toLocaleString() + unit;
+                                    return label;
+                                }
+                            }
+                        },
+                        datalabels: {
+                            display: true,
+                            color: '#333',
+                            anchor: 'end',
+                            align: 'end',
+                            formatter: (value) => value.toLocaleString() + unit
+                        }
+                    },
+                    scales: {
+                        x: {
+                            min: 0,
+                            max: canvasId === 'chartEcon' ? 1400 : yMax,
+                            grid: { color: '#e0e0e0' },
+                            ticks: { font: { size: 11 }, display: canvasId === 'chartEcon' ? true : true }
+                        },
+                        y: {
+                            min: yMin,
+                            max: canvasId === 'chartEcon' ? undefined : yMax,
+                            grid: { color: '#e0e0e0', drawBorder: false },
+                            ticks: { font: { size: 11 } }
+                        }
+                    }
+                },
+                plugins: [ChartDataLabels]
+            });
+        }
+
+        function createWelfareChart() {
+            const labels = ['아동양육시설', '청소년쉼터', '소년보호시설'];
+            const data = [51.5, 34.7, 24.8];
+            const colors = ['#3b82f6', '#f97316', '#dc2626']; // 소년보호시설(가장 낮은 수급률) 강조
+
+            return createBarChart('chartWelfare', labels, [{
+                label: '기초생활수급 비율',
+                data: data,
+                backgroundColor: colors,
+                barThickness: 60
+            }], 0, 60, '%', colors);
+        }
+
+        // 7. 경제적 상황 차트
+        function createEconChart() {
+            const labels = ['월평균 소득 (만원)', '평균 부채액 (만원)', '부채 보유율 (%)'];
+            const datasets = [
+                {
+                    label: '일반 청년 (29세 이하)',
+                    data: [365, 514, 16.3],
+                    backgroundColor: POSITIVE_COLOR,
+                    borderRadius: 4
+                },
+                {
+                    label: '시설 퇴소 청년',
+                    data: [170, 1366, 36.4],
+                    backgroundColor: NEGATIVE_COLOR,
+                    borderRadius: 4
+                }
+            ];
+            
+            // 특이점: 소득과 부채액은 만원 단위, 부채율은 % 단위. Y축 label에 % 단위 추가를 위해 커스터마이징 필요
+            const chart = new Chart(document.getElementById('chartEcon').getContext('2d'), {
+                type: 'bar',
+                data: { labels, datasets },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    indexAxis: 'y',
+                    layout: { padding: { left: 10, right: 20, top: 10, bottom: 10 } },
+                    plugins: {
+                        legend: { position: 'top' },
+                        tooltip: {
+                            callbacks: {
+                                label: function(context) {
+                                    let label = context.dataset.label || '';
+                                    if (label) { label += ': '; }
+                                    const value = context.raw;
+                                    const unit = context.dataIndex === 2 ? '%' : '만원';
+                                    label += value.toLocaleString() + unit;
+                                    return label;
+                                }
+                            }
+                        },
+                        datalabels: {
+                            display: true,
+                            color: '#333',
+                            anchor: 'end',
+                            align: 'end',
+                            formatter: (value, context) => value.toLocaleString() + (context.dataIndex === 2 ? '%' : '만원')
+                        }
+                    },
+                    scales: {
+                        x: {
+                            min: 0,
+                            max: 1400, // 부채액 최대값 반영
+                            grid: { color: '#e0e0e0' },
+                            ticks: { font: { size: 11 } }
+                        },
+                        y: {
+                            grid: { display: false },
+                            ticks: { font: { size: 12 } }
+                        }
+                    }
+                },
+                plugins: [ChartDataLabels]
+            });
+            return chart;
+        }
+
+        // 8. 심리적 위기 차트 (자살 생각 경험)
+        function createSuicideChart() {
+            const labels = ['일반 청년 (19~29세)', '시설 퇴소 청년'];
+            const data = [10.5, 46.5];
+            const colors = ['#60a5fa', '#dc2626']; // 붉은색 강조
+
+            return createBarChart('chartSuicide', labels, [{
+                label: '최근 1년 자살 생각 경험 비율',
+                data: data,
+                backgroundColor: colors,
+                barThickness: 80
+            }], 0, 60, '%', colors);
+        }
+        
         // ⭐️ 차트 초기화 함수 (DataLabels 활성화 여부 인자 추가: useLabels)
         function initChart(canvasId, labels, initialDatasets, yMin, yMax, useLabels = true) {
             const ctx = document.getElementById(canvasId).getContext('2d');
