Fix data source formatting in index.html

--- a/index.html
+++ b/index.html
@@ -410,8 +410,7 @@
             </div>
           </div>
         
-          <div class="data-source"> {line-height: 1.4;}  출처:<br>
-          백혜정 외. (2023). 2023년 시설퇴소청년의 생활실태 및 정책개발<br>
+          <div class="data-source"> 출처 : 백혜정 외. (2023). 2023년 시설퇴소청년의 생활실태 및 정책개발<br>
           이상정 외. (2024). 자립준비청년 자살원인 분석을 통한 효과적 예방체계 구축 연구</div>    
 
         <div id="policy-welfare-slide" class="slide-container policy-slide hidden">
