survey information update

--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
 
             <div class="chart-wrapper">
                 <canvas id="weeklyTrendChart"></canvas>
-            </div>
+            </div><div class="data-source">조사의뢰 : 한국갤럽 자체조사 / 조사기관 : 한국갤럽 / 조사기간 : 25년 12월 9일~11일 / 조사방법 : 무선100% 전화면접(CATI) 
+한국갤럽 데일리 오피니언 제645호 인용. 그 밖의 사항은 중앙선거여론조사심의위원회 홈페이지 참조 </div>
         </div>
 
         <div id="party-trend-slide" class="slide-container hidden">
