--- a/index.html
+++ b/index.html
@@ -386,9 +386,20 @@
             </div>
         </div>
 
+        <div id="policy-econ-slide" class="slide-container policy-slide hidden">
+            <div class="header">
+                <div class="title">1. 경제적 기반의 취약성</div>
+                <div class="subtitle">월평균 소득은 절반, 평균 부채액은 2.6배</div>
+            </div>
+            <div class="chart-wrapper">
+                <canvas id="chartEcon"></canvas>
+            </div>
+            <div class="data-source">출처: 2023 시설퇴소 자립준비청년 실태조사</div>
+        </div>
+
         <div id="policy-risk-slide" class="slide-container policy-slide hidden">
             <div class="header">
-                <div class="title">Section 2. 삶의 질 저하와 극단적인 위기</div>
+                <div class="title">2. 삶의 질 저하와 극단적인 위기</div>
                 <div class="subtitle">우울 증상 비율 4.1배, 자살 생각 경험 비율 4.4배</div>
             </div>
 
@@ -428,7 +439,7 @@
 
         <div id="policy-welfare-slide" class="slide-container policy-slide hidden">
             <div class="header">
-                <div class="title">Section 3. 정책의 사각지대</div>
+                <div class="title">3. 정책의 사각지대</div>
                 <div class="subtitle">퇴소 시설 유형에 따른 기초생활수급 비율 격차 (%)</div>
             </div>
             <div class="chart-wrapper">
@@ -439,22 +450,22 @@
 
         <div id="policy-solution-slide" class="slide-container policy-slide hidden">
             <div class="header">
-                <div class="title">Section 4. 격차 해소를 위한 정책 과제</div>
+                <div class="title">4. 격차 해소를 위한 정책 과제</div>
                 <div class="subtitle">자립 성공을 위한 시스템 강화 방안 (전문가 제언)</div>
             </div>
 
             <div style="width: 100%; margin-top: 10px; display: flex; flex-direction: column; gap: 10px;">
                 <div class="policy-item" style="border-left-color: #3b82f6;">
                     <h3>1. 지원 시스템 통합 및 전문 인력 확충</h3>
-                    <p>청년이 어떤 시설 출신이든 차별 없이 지원받도록 **부처 간 칸막이 해소** 및 복합적 문제 해결을 위한 **전담 인력** 확보.</p>
+                    <p>청년이 어떤 시설 출신이든 차별 없이 지원받도록 <b>부처 간 칸막이 해소</b> 및 복합적 문제 해결을 위한 **전담 인력** 확보.</p>
                 </div>
                 <div class="policy-item" style="border-left-color: #f97316; background: #fff7ed;">
                     <h3>2. 현실적인 금융 방패 마련 및 기간 현실화</h3>
-                    <p>**자립 지원 기간을 현실에 맞게 조정**하고, 금융 사기 예방을 위한 **실질적인 금융 교육을 의무화**하여 경제적 충격 방지.</p>
+                    <p><b>자립 지원 기간을 현실에 맞게 조정</b>하고, 금융 사기 예방을 위한 <b>실질적인 금융 교육을 의무화</b>하여 경제적 충격 방지.</p>
                 </div>
                 <div class="policy-item" style="border-left-color: #10b981; background: #f0fdf4;">
                     <h3>3. 심리 치료와 건강 관리의 연계 강화</h3>
-                    <p>**정신 건강 문제 해결을 위한 지원 확대** 및 **심리 치료 이력 단절 방지** 체계 구축. (트라우마, 우울증 등)</p>
+                    <p><b>정신 건강 문제 해결을 위한 지원 확대</b> 및 <b>심리 치료 이력 단절 방지</b> 체계 구축. (트라우마, 우울증 등)</p>
                 </div>
             </div>
             <div class="data-source">자료: 연구보고서 및 전문가 제언 종합</div>
