--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
         /* 좌측: 차트 2개를 위아래로 */
         .risk-charts{
           display: grid;
-          grid-template-rows: 1fr 1fr;
+          grid-template-rows: 1fr;
           gap: 12px;
-          min-height: 0; /* flex/grid에서 canvas 높이 계산 안정화 */
+          min-height: 0; 
         }
         
         .risk-chart-box{
@@ -403,15 +403,12 @@
                 <div class="subtitle">우울 증상 비율 4.1배, 자살 생각 경험 비율 4.4배</div>
             </div>
 
-            <!-- ✅ 3열 레이아웃: (차트 2/3) + (요약박스 1/3) -->
+            <!-- ✅ 2열 레이아웃: (차트) + (요약박스) -->
             <div class="risk-grid">
-                <!-- 좌측: 바차트 2개 -->
+                <!-- 좌측: 통합 바차트 1개 -->
                 <div class="risk-charts">
                 <div class="risk-chart-box">
-                    <canvas id="chartSuicide"></canvas>
-                </div>
-                <div class="risk-chart-box">
-                    <canvas id="chartDepression"></canvas>
+                    <canvas id="chartRisk"></canvas>
                 </div>
                 </div>
 
@@ -421,12 +418,6 @@
                     <h3>우울 증상 유무</h3>
                     <p class="risk-big">24.5%</p>
                     <p class="risk-sub">(일반 청년 5.9%)</p>
-                </div>
-
-                <div class="risk-card risk-card-blue">
-                    <h3>삶의 만족도</h3>
-                    <p class="risk-big">4.93점</p>
-                    <p class="risk-sub">(10점 만점 / 보통 미만)</p>
                 </div>
                 </div>
             </div>
@@ -516,9 +507,8 @@
 
         // 자립청년 데이터 차트 객체 (새로 추가)
         let chartEcon = null;
-        let chartSuicide = null;
         let chartWelfare = null;
-        let chartDepression = null;
+        let chartRisk = null;
 
         // ⭐️ 슬라이드 순서 및 상태 관리 (총 11개로 증가)
         const slideOrder = [
@@ -941,29 +931,55 @@
         }
 
         // 8. 심리적 위기 차트 (자살 생각 경험)
-        function createSuicideChart() {
-            const labels = ['일반 청년 (19~29세)', '시설 퇴소 청년'];
-            const data = [10.5, 46.5];
-            const colors = ['#60a5fa', '#dc2626']; // 붉은색 강조
+        function createRiskCombinedChart() {
+            const labels = ['자살 생각 경험 비율', '우울 증상 경험 비율'];
 
-            return createBarChart('chartSuicide', labels, [{
-                label: '최근 1년 자살 생각 경험 비율',
-                data: data,
-                backgroundColor: colors,
-                barThickness: 80
-            }], 0, 60, '%');
-        }
-        function createDepressionChart() {
-          const labels = ['일반 청년 (19~29세)', '시설 퇴소 청년'];
-          const data = [5.9, 24.5];
-          const colors = ['#60a5fa', '#dc2626']; // 동일 색상 체계 유지
-        
-          return createBarChart('chartDepression', labels, [{
-            label: '우울 증상 경험 비율',
-            data: data,
-            backgroundColor: colors,
-            barThickness: 80
-          }], 0, 30, '%');
+            const datasets = [
+                {
+                label: '일반 청년 (19~29세)',
+                data: [10.5, 5.9],
+                backgroundColor: '#60a5fa',
+                borderRadius: 4
+                },
+                {
+                label: '시설 퇴소 청년',
+                data: [46.5, 24.5],
+                backgroundColor: '#dc2626',
+                borderRadius: 4
+                }
+            ];
+
+            const ctx = document.getElementById('chartRisk').getEncodes ? null : document.getElementById('chartRisk').getContext('2d');
+
+            return new Chart(ctx, {
+                type: 'bar',
+                data: { labels, datasets },
+                options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                layout: { padding: { left: 10, right: 20, top: 10, bottom: 10 } },
+                plugins: {
+                    legend: { position: 'bottom', labels: { usePointStyle: true, boxWidth: 10, padding: 15 } },
+                    tooltip: {
+                    callbacks: {
+                        label: (context) => `${context.dataset.label}: ${context.parsed.y}%`
+                    }
+                    },
+                    datalabels: {
+                    display: true,
+                    color: '#333',
+                    anchor: 'end',
+                    align: 'end',
+                    formatter: (v) => `${v}%`
+                    }
+                },
+                scales: {
+                    y: { min: 0, max: 60, ticks: { stepSize: 10 }, grid: { color: '#e0e0e0' } },
+                    x: { grid: { display: false }, ticks: { font: { size: 12 } } }
+                }
+                },
+                plugins: [ChartDataLabels]
+            });
         }
 
         // ⭐️ 차트 초기화 함수 (DataLabels 활성화 여부 인자 추가: useLabels)
@@ -1221,10 +1237,8 @@
                     } else {chartEcon.update();}
                     break;
                 case 'policy-risk-slide':   // 9페이지
-                    if (!chartSuicide) chartSuicide = createSuicideChart();
-                    else chartSuicide.update();
-                    if (!chartDepression) chartDepression = createDepressionChart();
-                    else chartDepression.update();
+                    if (!chartRisk) chartRisk = createRiskCombinedChart();
+                    else chartRisk.update();
                     break;
                 case 'policy-welfare-slide': // 10페이지
                     if (!chartWelfare) { chartWelfare = createWelfareChart();
