--- a/index.html
+++ b/index.html
@@ -267,7 +267,38 @@
           font-size: 13px;
           margin: 0;
         }
+        
+        /* policy-solution 슬라이드: 출처를 항상 맨 아래로 */
+        .policy-solution-body { 
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 auto;
+        min-height: 0;
+        }
 
+        .policy-solution-source{
+        margin-top: auto;   /* ✅ 아래로 밀어붙임 */
+        }
+
+        /* 본문 가독성 개선 */
+        .policy-item p{
+        margin: 6px 0 0 0;
+        line-height: 1.45;
+        max-width: 820px;   /* ✅ 한 줄 너무 길어지는 것 방지 */
+        white-space: normal;
+        word-break: keep-all;
+        }
+
+        /* 문장을 불릿으로 쪼개서 보여주고 싶을 때 */
+        .policy-item ul{
+        margin: 6px 0 0 18px;
+        padding: 0;
+        line-height: 1.45;
+        max-width: 820px;
+        }
+        .policy-item li{
+        margin: 4px 0;
+        }
 
     </style>
 </head>
@@ -410,7 +441,7 @@
                 </div>
             </div>
 
-            <div class="data-source">출처: 2023 시설퇴소 자립준비청년 실태조사</div>
+            <div class="data-source">출처 : 백혜정 외. (2023). 2023년 시설퇴소청년의 생활실태 및 정책개발</div>
         </div>
 
 
@@ -462,22 +493,43 @@
                 <div class="subtitle">자립 성공을 위한 시스템 강화 방안 (전문가 제언)</div>
             </div>
 
-            <div style="width: 100%; margin-top: 10px; display: flex; flex-direction: column; gap: 10px;">
-                <div class="policy-item" style="border-left-color: #3b82f6;">
+            <!-- ✅ 본문/출처를 분리해서, 출처를 아래로 고정 -->
+            <div class="policy-solution-body">
+
+                <div style="width:100%; margin-top:10px; display:flex; flex-direction:column; gap:10px;">
+                <div class="policy-item" style="border-left-color:#3b82f6;">
                     <h3>1. 지원 시스템 통합 및 전문 인력 확충</h3>
-                    <p>청년이 어떤 시설 출신이든 차별 없이 지원받도록 <b>부처 간 칸막이 해소</b> 및 복합적 문제 해결을 위한 **전담 인력** 확보.</p>
+                    <ul>
+                    <li><b>부처 간 칸막이 해소</b>로 지원 경로를 단일화</li>
+                    <li>복합 문제(주거·취업·건강) 대응을 위한 <b>전담 인력</b> 확충</li>
+                    </ul>
                 </div>
-                <div class="policy-item" style="border-left-color: #f97316; background: #fff7ed;">
+
+                <div class="policy-item" style="border-left-color:#f97316; background:#fff7ed;">
                     <h3>2. 현실적인 금융 방패 마련 및 기간 현실화</h3>
-                    <p><b>자립 지원 기간을 현실에 맞게 조정</b>하고, 금융 사기 예방을 위한 <b>실질적인 금융 교육을 의무화</b>하여 경제적 충격 방지.</p>
+                    <ul>
+                    <li><b>자립 지원 기간</b>을 현실에 맞게 조정</li>
+                    <li>금융사기 예방을 위한 <b>금융 교육 의무화</b> 및 상시 상담</li>
+                    </ul>
                 </div>
-                <div class="policy-item" style="border-left-color: #10b981; background: #f0fdf4;">
+
+                <div class="policy-item" style="border-left-color:#10b981; background:#f0fdf4;">
                     <h3>3. 심리 치료와 건강 관리의 연계 강화</h3>
-                    <p><b>정신 건강 문제 해결을 위한 지원 확대</b> 및 <b>심리 치료 이력 단절 방지</b> 체계 구축. (트라우마, 우울증 등)</p>
+                    <ul>
+                    <li><b>정신건강 지원</b> 확대(우울·트라우마 등)</li>
+                    <li><b>치료 이력 단절</b>을 막는 연계·추적 관리 체계 구축</li>
+                    </ul>
                 </div>
+                </div>
+
+                <div class="data-source policy-solution-source">
+                출처 : 백혜정 외. (2023). 2023년 시설퇴소청년의 생활실태 및 정책개발<br>
+                이상정 외. (2024). 자립준비청년 자살원인 분석을 통한 효과적 예방체계 구축 연구
+                </div>
+
             </div>
-            <div class="data-source">자료: 연구보고서 및 전문가 제언 종합</div>
         </div>
+
 
     </div>
 
