--- a/index.html
+++ b/index.html
@@ -463,9 +463,9 @@
                 <!-- 우측 요약 카드 -->
                 <div class="risk-side">
                     <div class="risk-card risk-card-blue">
-                        <h3>삶의 만족도</h3>
+                        <h3>삶의 만족도(10점 만점)</h3>
                         <p class="risk-big">4.93점</p>
-                        <p class="risk-sub">(10점 만점 / 보통 미만)</p>
+                        <p class="risk-sub">(일반 청년 6.71점)</p>
                     </div>
                 </div>
             </div>
