--- a/index.html
+++ b/index.html
@@ -255,15 +255,16 @@
         }
 
         .policy-item ul {
-            margin: 6px 0 0 18px;
-            padding: 0;
-
+            margin: 10px 0 0 24px;
+            padding-left: 14px;      /* ← 불릿과 텍스트 간 거리 */
             line-height: 1.55;
-            max-width: 820px;
+            max-width: 800px;
+            list-style-position: outside;
         }
 
         .policy-item li {
-            margin: 4px 0;
+            margin: 6px 0;
+            padding-left: 2px;  
             font-size: 15px; /* p와 동일 스케일 */
             color: #333;
             word-break: keep-all;
